--- a/documentation/index.adoc
+++ b/documentation/index.adoc
@@ -1,9 +1,12 @@
-= XXX Documentation
+= Software Documentation for the {projectName}
+:doctype: book
 :toc: left
 :toclevels: 3
 :sectnumlevels: 5
+//:leveloffset: 1 TODO: enable this line when documentation is complete
 :icons: font
-:copyright: Open Logistics Foundation
+:copyright: Open Logistics Foundation License 1.3
+:projectName: NFT Folder
 
 [[section-preface]]
 == Preface
