--- a/documentation/05_building_block_view.adoc
+++ b/documentation/05_building_block_view.adoc
@@ -1,4 +1,9 @@
 [[section-building-block-view]]
+:copyright: Open Logistics Foundation
+:docinfo: shared
+:toc:
+:sectnums:
+
 == Building Block View
 
 The building block view is a static and hierarchical decomposition of the system into building blocks and their relationships.
@@ -10,45 +15,25 @@ However, for interface specifications including all method signatures and their 
 Only other kinds of interfaces are described here.
 This is a simplification of arc42 (which requires short description of interfaces), to avoid redundancy and inconsistencies, and to reduce documentation efforts.
 
-[Tip]
-====
-*Important for chapter 5*
-
-. Description of the overall structure:
-** Which components (e.g. frontend, backend, DBs, etc.)?
-** What are the responsibilities/tasks of the individual components?
-** How are these components connected?
-** External interfaces provided by the components.
-** Connections to/from external systems, if any.
-. Description of the individual components.
-** Structure of the components (via class diagram)
-*** Only include the "important/essential" classes and their relationships in the diagrams. (Contributes to clarity.)
-*** Detailed description of the classes via table.
-** Describe the data model of the component.
-*** Overview as class diagram.
-*** Description of data types via table.
-** For further information use the code documentation (e.g. Javadoc).
-** For non-self-developed components like DBs, only mention the used technology/tool incl. version and their task in your project.
-. Description of the individual classes
-** Task(s) only
-** Optional: Describe helpers or utility classes.
-** Details are already part of the code documentation (e.g. Javadoc).
-====
-
 === Overview
 
-The NFT map is a tool that allows data to be written to a blockchain as non-fungible Tokens. These Tokens can be assigned to so-called Segments, which in turn can belong to Containers. This functionality is realized via smart contracts that are deployed on a quorum blockchain. A Blockchain Connector is used to utilize the functions of the smart contracts.
+The NFT-Folder allows for the tokenization of Real-World Assets (RWAs), converting them into Non-Fungible Tokens (NFTs) and storing them on a private Ethereum-based blockchain.
+This system consists of three Smart Contracts - Container, Segment, and Token - deployed on a Quorum blockchain, along with two microservices designed to interact with these deployed Smart Contracts.
 
-The Blockchain Connector is a tool to access the Blockchain and execute transactions on the Smart Contracts of the NFT-Folder. It can be used as an interface for the NFT-Folder. It supports the creation of new Tokens and Segments and takes care of the assignment of Tokens to Segments. Every Blockchain Connector instance has a fixed Container.
+Each NFT can be linked to a Segment, which, in turn, is part of a Container.
+A Container is owned by a single organization and acts as a central hub for managing the organization's Segments and Tokens.
+To access the functionalities of the Smart Contracts, a Blockchain Connector is utilized.
 
-TODO Overview diagram with Actors/Stakeholders handling the XXX
+The two microservices include the Blockchain Connector and the Project-specific Blockchain Connector.
+The latter is specifically tailored for projects integrating the NFT-Folder, facilitating interaction with the Smart Contracts through the Blockchain Connector interface.
 
+image::drawio/chapter_5/components_blackbox.svg[NFT-Folder components]
 
-=== Whitebox Blockchain Connector - Level 1
+=== Whitebox NFT-Folder - Level 1
 
 In level 1, the components of the NFT-Folder and their relationships are shown.
 
-TODO UML Component diagram or UML Class diagram
+image::drawio/chapter_5/components_whitebox.svg[NFT-Folder components]
 
 There are the following components with its responsibilities:
 
@@ -60,19 +45,19 @@ There are the following components with its responsibilities:
 
 |Project-specific Blockchain Connector
 |Custom Development
-|Accesses the smart contracts of the NFT folder via the general blockchain connector. Implemented for every project that integrates the NFT map.
+|Handles token management for the organization by interacting with the Blockchain Connector. Specifically designed for each project integrating the NFT-Folder.
 
 |Blockchain Connector
 |Custom Development
-|Represent a general variant of the project-specific blockchain connectors. Encapsulates access to the smart contracts. Is used by the project-specific blockchain connectors to use the functionality of the smart contracts.
+|Provides an interface for interacting with the Smart Contracts. Used by the project-specific Blockchain Connector to leverage Smart Contract functionality.
 
 |NFT-Folder Smart Contracts
 |Custom Development
-|Realizes the functionality required to store tokens on the blockchain.
+|Implements the features for tokenization and storage of Real-World Assets. Comprises the Container, Segment, and Token Smart Contracts.
 
 |Quorum Blockchain
-|Blockchain-Database
-|Stores information about tokens, segments and containers in a decentralized manner.
+|Blockchain Platform
+|Serves as a decentralized ledger storing information on Tokens, Segments, and Containers.
 |===
 
 For each NFT-Folder component we give a brief overview as a blackbox view.
@@ -80,218 +65,169 @@ For more details see Level 2 (Whitebox views of the components).
 
 ==== Project-specific Blockchain Connector (Blackbox)
 
-TODO
+The project-specific Blockchain Connector is a web service serving as a bridge between the project and the Blockchain Connector.
+It is customized to meet the specific requirements of a given project.
+For instance, if a project solely intends to manage tokens using the NFT-Folder, the project-specific Blockchain Connector will only implement such token management functions.
+It will then relay requests to the appropriate endpoints of the Blockchain Connector.
+
+This tailored approach ensures that the project-specific Blockchain Connector precisely aligns with the needs of the project it serves.
+By focusing solely on the functionalities relevant to the project's objectives, it optimizes efficiency and streamlines operations within the project's ecosystem.
 
 ==== Blockchain Connector (Blackbox)
 
-The Blockchain Connector consists of a web service that implements various functions.
+The Blockchain Connector is a web service that offers a range of functions:
 
-* Segment
-** Create Segment and store it
-** Read Segments from the Blockchain
-** Add a Token to a Segment
-** Remove a Token from a Segment
-* Token
-** Mint Token
-** Read Token
-** Return all Tokens of a Segment
-** Update a Token
-** Burn a Token
+**Segment Management**
 
-The web service is build in NestJs and the communication is done via RESTful API, that uses JSON for data transfer.
+* Create a Segment
+* Read Segments
+* Add a Token to a Segment
+* Remove a Token from a Segment
 
-For more details, please refer to the corresponding service whitebox.
+**Token Management**
+
+* Mint a Token
+* Read a Token
+* Return all Tokens of a Segment
+* Update a Token
+* Burn a Token
+
+This web service is built using NestJs, and communication occurs via a RESTful API, utilizing JSON for data transfer.
+
+For further insights and detailed information, please consult the corresponding Service whitebox documentation.
 
 ==== NFT Folder Smart Contracts (Blackbox)
 
-The Smart Contracts of the NFT Folder implement the various functions required to store the data on the blockchain.
+The Smart Contracts within the NFT Folder encompass various functions essential for storing and reading data on the Blockchain:
 
-* Container
-** Create Segment
-** Read Segments, that are associated with the Container
-* Segment
-** Add a Token to a Segment
-** Remove a Token from a Segment
-* Token
-** Mint Token
-** Read Token
-** Update a Token
-** Burn a Token
-* ERC721AdditionalInformation
-** Add additionalInformation to a Token
-** Read additionalInformation of a Token
-** Remove additionalInformation from a Token
-* ERC721Asset
-** Set Asset URI and Asset Hash of a Token
-** Read Asset URI and Asset Hash of a Token
-* ERC721Metadata
-** Set Metadata URI and Asset Hash of a Token
-** Read Metadata URI and Asset Hash of a Token
-* ERC721SegmentAllocation
-** Add a Token to a Segment
-** Read the Segment of a Token
-** Remove a Token from a Segment
+**Container**
+
+* Create a Segment
+* Read Segments associated with the Container
+
+**Segment**
+
+* Add a Token to a Segment
+* Remove a Token from a Segment
+
+**Token**
+
+* Mint a Token
+* Read a Token
+* Update a Token
+* Burn a Token
+
+**ERC721AdditionalInformation**
+
+* Add additional information to a Token
+* Read additional information of a Token
+* Remove additional information from a Token
+
+**ERC721Asset**
+
+* Set the Hash and URI of the asset to a Token
+* Read the Hash and URI of the asset of a Token
+
+**ERC721Metadata**
+
+* Set the Hash and URI of the metadata to a Token
+* Read the Hash and URI of the metadata of a Token
+
+**ERC721SegmentAllocation**
+
+* Add a Token to a Segment
+* Read the Segment of a Token
+* Remove a Token from a Segment
 
 ==== Quorum Blockchain (Blackbox)
 
-The Quorum blockchain is a decentralized storage for information that ensures that access can only be made by authorized users. In the context of the NFT-Folder, the Blockchain serves as the only repository for information about Tokens, Segments and Containers.
+Quorum Blockchain is a permissioned, enterprise-focused blockchain platform, based on the Ethereum protocol.
+It is designed to offer privacy, high throughput, and enhanced performance for businesses and financial institutions by implementing features such as private transactions and permissioned networks.
+
+In the context of the NFT-Folder, the Blockchain serves as the exclusive storage platform for tokenized assets related to Containers, Segments, and Tokens.
+It is responsible for storing and managing the Smart Contracts, ensuring the integrity and security of the data stored within.
 
 === Building Blocks - Level 2
 
 In level 2, the black boxes of level 1 become white boxes.
 We look into each component in detail.
 
-==== Project-specific Blockchain Connector (Whitebox)
-
-TODO
-
 ==== Blockchain Connector (Whitebox)
 
 This section describes the Blockchain Connector architecture and its implementation.
+The Blockchain Connector is a single NestJs Webservice.
 
 |===
-|Component |Description
+|Component Collection |Component |Description
 
-|Column 1, row 1
-|Column 2, row 1
+|**Segment Management**
+|
+|
 
-|Column 1, row 2
-|Column 2, row 2
+|
+|Segment Controller
+|Provides REST endpoints, that are used to communicate with the Blockchain Connector. The Segment Controller invokes the Segment Service to execute Smart Contract functions. More details on the REST API can be found in the openAPI specification.
 
-|Column 1, row 3
-|Column 2, row 3
+|
+|Segment Service
+|The Segment Service offers functionalities that use the capabilities of Smart Contracts to manage Segments. It relies on the Blockchain Service to generate transaction objects and send them to the Blockchain.
 
-|Column 1, row 4
-|Column 2, row 4
+
+|**Token Management**
+|
+|
+
+|
+|Token Controller
+|Provides REST endpoints, that are used to communicate with the Blockchain Connector. The Token Controller invokes the Token Service to execute the Smart Contract functions. More details on the REST API can be found in the openAPI specification.
+
+|
+|Token Service
+|The Token Service offers functionalities that use the capabilities of Smart Contracts to manage Tokens. It relies on the Blockchain Service to generate transaction objects and send them to the Blockchain.
+
+|
+|Event Service
+|The Event Service uses the Blockchain Service to retrieve Events from the Blockchain related to a specific Token. Information regarding the Events of a Token is then used by the Token Service to assemble the Token DTO for the response.
+
+|**Blockchain Service**
+|
+|The Blockchain Service implements fundamental functionalities for interacting with the Blockchain, such as transaction handling. This service is used by the aforementioned services to create transaction objects and send them to the Blockchain.
+
+|**Web3 Service**
+|
+|Establishes a connection to the Blockchain, which is then used by the Blockchain Service.
+
 |===
 
-TODO UML Component diagram or UML Class diagram
+==== NFT Folder Smart Contracts (Whitebox)
 
-===== Component 1.1 (Blackbox)
+The Smart Contracts within the NFT-Folder encapsulate the core functionality of the system.
+They manage Containers, Segments, and Tokens.
 
-TODO
-
-===== Component 1.2 (Blackbox)
-
-TODO
-
-===== Component 1.3 (Blackbox)
-
-The Component 1.3 has the following interfaces not described as JavaDoc or OpenAPI: besides event queues for publishing and subscribing events there are TCP-Ports for ... communication in both directions.
-
-[cols="4",options="header"]
 |===
-|ID
-|Interfaces
-|Type
-|Message
+|Smart Contract |Description
 
-|1
-|AMPQ queue
-|Publish
-|Publish Message to RabbitMQ
+|Container
+|For each organization utilizing the NFT-Folder, a distinct instance of the Container contract is deployed on the Blockchain. This contract is responsible for the creation of new Segments, which are automatically associated with the Container. Additionally, the Container contract retrieves all Segments belonging to it.
 
-|2
-|MQTT topic
-|Subscription
-|Subscription for new ....
+|Segment
+|The Segment contract is deployed via the Container contract. Given that the Container contract is owned by a particular organization, the Segment contract created through it is inherently tied to that organization. This contract handles the addition and removal of Tokens from the Segment.
+
+|Token
+|The Token contract implements functionality based on the ERC-721 standard. Consequently, it provides functions for the entire lifecycle of NFTs and offers additional features through five extension contracts.
+
+|ERC721AdditionalInformation
+|The ERC721AdditionalInformation contract extends the Token contract by providing functions to define and retrieve additional information, represented as a string, to the Token.
+
+|ERC721Asset
+|The ERC721Asset contract extends the Token contract by providing functions to define and retrieve the hash and URI of a RWA. The respective RWA is stored externally, not on the blockchain. The URI denotes the location of this external storage, while the hash represents the fingerprint of this RWA and serves to verify the asset's integrity.
+
+|ERC721Metadata
+|The ERC721Metadata contract extends the Token contract by providing functions to define and retrieve the hash and URI of the metadata of a RWA. The respective metadata is stored externally, not on the blockchain. The URI denotes the location of this external storage, while the hash represents the fingerprint of this metadata and serves to verify the asset's integrity.
+
+|ERC721RemoteId
+|The ERC721RemoteId contract extends the Token contract by providing functions to define and retrieve the specific identifier of a RWA. This identifier serves to uniquely identify the RWA within the external system, such as a database.
+
+|ERC721SegmentAllocation
+|The ERC721SegmentAllocation contract extends the Token contract by providing functions of assign and remove a Token from a Segment. A Token can be assigned to multiple Segments as needed.
 |===
-
-==== Component 2 (Whitebox)
-
-The Component 2 .... It is composed of several components, as summarized in the table and displayed in the following figure.
-
-[cols="2",options="header"]
-|===
-|Component
-|Description
-
-|Column 1, row 1
-|Column 2, row 1
-
-|Column 1, row 2
-|Column 2, row 2
-
-|Column 1, row 3
-|Column 2, row 3
-
-|Column 1, row 4
-|Column 2, row 4
-|===
-
-TODO UML Component diagram or UML Class diagram
-
-===== Component 2.1 (Blackbox)
-
-TODO
-
-===== Component 2.2 (Blackbox)
-
-TODO
-
-=== Management Frontend (Whitebox)
-
-The Management Frontend is the XXX own visualization.
-It consists of components for ... management and for monitoring, as shown in the following figure.
-
-[cols="2",options="header"]
-|===
-|Component
-|Description
-
-|Column 1, row 1
-|Column 2, row 1
-
-|Column 1, row 2
-|Column 2, row 2
-
-|Column 1, row 3
-|Column 2, row 3
-
-|Column 1, row 4
-|Column 2, row 4
-|===
-
-The components occuring in the diagram only and not in the table are used as data classes.
-
-TODO UML Component diagram or UML Class diagram
-
-=== Building Blocks - Level 3
-
-We detail the blackbox components occurring on Level 2, which are developed within this project (i.e. not library components or components developed in other SE projects).
-
-==== Component 1.1 (Whitebox)
-
-Not yet implemented.
-
-==== Component 1.2 (Whitebox)
-
-The XXX .... It is composed of several components, as summarized in the table and displayed in the following figure.
-
-[cols="2",options="header"]
-|===
-|Component
-|Description
-
-|Column 1, row 1
-|Column 2, row 1
-
-|Column 1, row 2
-|Column 2, row 2
-
-|Column 1, row 3
-|Column 2, row 3
-
-|Column 1, row 4
-|Column 2, row 4
-|===
-
-TODO UML Component diagram or UML Class diagram
-
-===== Component 1.2.1 (Blackbox)
-
-TODO
-
-===== Component 1.2.2 (Blackbox)
-
-TODO
