Add chapter 06 and 07

--- a/documentation/06_runtime_view.adoc
+++ b/documentation/06_runtime_view.adoc
@@ -1,76 +1,36 @@
 [[section-runtime-view]]
 == Runtime View
 
-In contrast to the static building block view, this section visualizes dynamic aspects of an XXX.
-The runtime view describes concrete behavior and interactions of the system’s building blocks across the architecture, i.e., how instances of building blocks of an XXX perform their job and communicate at runtime.
+In contrast to the static building block view, this section visualizes dynamic aspects of the NFT-Folder.
+The runtime view describes concrete behavior and interactions of the system's building blocks across the architecture, i.e., how instances of building blocks of the NFT-Folder perform their job and communicate at runtime.
 Important usage scenarios with architectural relevance are e.g. interactions at critical external interfaces, operation and administration (launch, start-up, stop), and error and exception scenarios.
 
 === General Component Communication
 
-All inter component communication in the XXX relies on passing JSON messages either via AMQP and the RabbitMQ broker or via accessing a MongoDB database.
-For long-term storage all device messages sent to the broker are persisted in the database by the MongoDB Connector.
-To achieve a common understanding of all XXX components, specific communication schemes must be adhered to so that:
+All communication between the NFT-Folder components occurs through the exchange of JSON messages, facilitated either via REST or JSON-RPC.
 
-Device messages are reliably persisted in the database without the necessity to configure the mongodb-connector for specific adapters or connectors Data can be retrieved or (in case of a broker connection) can be subscribed to across device type boundaries Devices can be identified uniquely although their specific identifiers may be unique within their domain (e.g. an ID may only be unique for this specific type of device) No information loss on saving messages to database, especially concerning the origin of the message
+The following diagram outlines how the components of the NFT-Folder interact with each other:
 
-This common communication scheme is a key motivation for the SDK which is intended to be the canonical implementation of high level access functions which enforce those.
+image::drawio/chapter_6/component_communication.svg[BC-Connector Communication]
 
-A description of key elements of this communication scheme is described in the following chapters.
+1. The *external project* using the NFT-Folder must develop its own project-specific Blockchain Connector tailored to its specific use case functionality.
+2. The *project-specific Blockchain Connector* interacts with the smart contracts through the REST API of the Blockchain Connector.
+3. The *Blockchain Connector* uses the web3.js library to establish a connection to the blockchain, enabling transactions and read operations.
+4. The *Quorum Blockchain* is accessible through JSON-RPC.
 
-==== AMQP-related schemes and definitions
+=== Use Cases and process information
 
-All messages sent by ... are forwarded to a specific AMQP exchange.
-This is done by the ... implementations, ideally using the provided SDK functions.
-The name of this AMQP exchange is "remote".
-The routing key used to publish device messages via AMQP should match the following scheme: xxx.<source>.<tenant>.message
+==== Use Case 1 - Mint Token
 
-In this scheme "source" describes the type of ... that retrieved the message from a device and "tenant" identifies the actual device the message was sent from (e.g. a device ID).
-XXX components can use the "remote" exchange and create and bind component-specific queues to it to receive messages.
+image::drawio/chapter_6/mint-token.svg[Mint Token]
 
-==== Database schemes and definitions
+==== Use Case 2 - Update Token
 
-All messages which are sent by devices and submitted to the AMQP broker are automatically picked up by the database-connector and persisted in the database.
-This is a non-consuming operation, i.e. the messages are still present for other XXX components to be picked up.
-The mongodb-connector specifically mirrors all messages sent to the "remote" exchange in the AMQP broker to the database.
-All mongodb-connector instances share a common queue "mongo-connector" which is configured to send each message reliably to only a single running instance of the mongodb-connector regardless of how many instances are running and connected.
-All messages are persisted in a dedicated database called "device-communication" in a single collection "messagesIn".
+image::drawio/chapter_6/update-token.svg[Update Token]
 
-The routing key scheme described in 6.1.1 provides a scheme to extend the data to persist with necessary metadata to adhere to the requirements so that the persisted message consists of:
+==== Use Case 3 - Burn Token
 
-"source" - the type of adapter who retrieved this message from the device "tenant" - the unique (per one value of "source") identification of the device that sent the message "timestamp" - the time in UTC (ISO-8601) this message was saved into the database "message" - the actual payload message as submitted to the broker by the adapter instance
+image::drawio/chapter_6/burn-token.svg[Burn Token]
 
-Every XXX component is free to use the message database for retrieval of device messages.
-However, per convention only the connector places data there.
-The relevant functions are therefore not part of the SDK and instead implemented in the connector directly.
-The DBMS itself can further be used freely by other XXX components directly as long as they use dedicated databases for their purposes (e.g. managing a list of devices, storing device configuration data, etc.)
 
-Those are typically expected to be use-case or device specific.
 
-=== Use Case 1
-
-The following communication steps are executed throughout the XXX architecture when ...
-
-TODO UML Sequence Diagram
-
-[cols="3",options="header"]
-|===
-|ID
-|Step
-|Description
-
-|1
-|login
-|Login via Web UI
-
-|2
-|...
-|add description
-
-|Column 1, row 3
-|Column 2, row 3
-|Column 3, row 3
-|===
-
-=== Use Case 2
-
-...
