--- a/documentation/05_building_block_view.adoc
+++ b/documentation/05_building_block_view.adoc
@@ -1,23 +1,24 @@
-[[section-building-block-view]]
-:copyright: Open Logistics Foundation
+[[chapter-building-block-view]]
 :docinfo: shared
-:toc:
+:toc: left
+:toclevels: 3
 :sectnums:
+:copyright: Open Logistics Foundation License 1.3
 
-== Building Block View
+= Building Block View
 
 The building block view is a static and hierarchical decomposition of the system into building blocks and their relationships.
 It is a collection of black box and white box descriptions for all important components.
 Building blocks may be modules, components, subsystems, classes, interfaces, packages, libraries, frameworks, layers, partitions, tiers, functions, macros, operations, data structures, etc.).
 
 In blackbox view, only the interface of the component is visible, not its internals.
-However, for interface specifications including all method signatures and their descriptions we refer to the JavaDoc available on request, or to the OpenAPI documents.
+However, for interface specifications including all method signatures and their descriptions we refer to the link:openAPI.json[OpenAPI documents].
 Only other kinds of interfaces are described here.
 This is a simplification of arc42 (which requires short description of interfaces), to avoid redundancy and inconsistencies, and to reduce documentation efforts.
 
-=== Overview
+== Overview
 
-The NFT-Folder allows for the tokenization of Real-World Assets (RWAs), converting them into Non-Fungible Tokens (NFTs) and storing them on a private Ethereum-based blockchain.
+The {projectName} allows for the tokenization of Real-World Assets (RWAs), converting them into Non-Fungible Tokens (NFTs) and storing them on a private Ethereum-based blockchain.
 This system consists of three Smart Contracts - Container, Segment, and Token - deployed on a Quorum blockchain, along with two microservices designed to interact with these deployed Smart Contracts.
 
 Each NFT can be linked to a Segment, which, in turn, is part of a Container.
@@ -25,15 +26,15 @@ A Container is owned by a single organization and acts as a central hub for mana
 To access the functionalities of the Smart Contracts, a Blockchain Connector is utilized.
 
 The two microservices include the Blockchain Connector and the Project-specific Blockchain Connector.
-The latter is specifically tailored for projects integrating the NFT-Folder, facilitating interaction with the Smart Contracts through the Blockchain Connector interface.
+The latter is specifically tailored for projects integrating the {projectName}, facilitating interaction with the Smart Contracts through the Blockchain Connector interface.
 
-image::drawio/chapter_5/components_blackbox.svg[NFT-Folder components]
+image::drawio/chapter_5/components_blackbox.svg[{projectName} components]
 
-=== Whitebox NFT-Folder - Level 1
+== Whitebox {projectName} - Level 1
 
-In level 1, the components of the NFT-Folder and their relationships are shown.
+In level 1, the components of the {projectName} and their relationships are shown.
 
-image::drawio/chapter_5/components_whitebox.svg[NFT-Folder components]
+image::drawio/chapter_5/components_whitebox.svg[{projectName} components]
 
 There are the following components with its responsibilities:
 
@@ -45,13 +46,13 @@ There are the following components with its responsibilities:
 
 |Project-specific Blockchain Connector
 |Custom Development
-|Handles token management for the organization by interacting with the Blockchain Connector. Specifically designed for each project integrating the NFT-Folder.
+|Handles token management for the organization by interacting with the Blockchain Connector. Specifically designed for each project integrating the {projectName}.
 
 |Blockchain Connector
 |Custom Development
 |Provides an interface for interacting with the Smart Contracts. Used by the project-specific Blockchain Connector to leverage Smart Contract functionality.
 
-|NFT-Folder Smart Contracts
+|{projectName} Smart Contracts
 |Custom Development
 |Implements the features for tokenization and storage of Real-World Assets. Comprises the Container, Segment, and Token Smart Contracts.
 
@@ -60,20 +61,20 @@ There are the following components with its responsibilities:
 |Serves as a decentralized ledger storing information on Tokens, Segments, and Containers.
 |===
 
-For each NFT-Folder component we give a brief overview as a blackbox view.
+For each {projectName} component we give a brief overview as a blackbox view.
 For more details see Level 2 (Whitebox views of the components).
 
-==== Project-specific Blockchain Connector (Blackbox)
+=== Project-specific Blockchain Connector (Blackbox)
 
 The project-specific Blockchain Connector is a web service serving as a bridge between the project and the Blockchain Connector.
 It is customized to meet the specific requirements of a given project.
-For instance, if a project solely intends to manage tokens using the NFT-Folder, the project-specific Blockchain Connector will only implement such token management functions.
+For instance, if a project solely intends to manage tokens using the {projectName}, the project-specific Blockchain Connector will only implement such token management functions.
 It will then relay requests to the appropriate endpoints of the Blockchain Connector.
 
 This tailored approach ensures that the project-specific Blockchain Connector precisely aligns with the needs of the project it serves.
 By focusing solely on the functionalities relevant to the project's objectives, it optimizes efficiency and streamlines operations within the project's ecosystem.
 
-==== Blockchain Connector (Blackbox)
+=== Blockchain Connector (Blackbox)
 
 The Blockchain Connector is a web service that offers a range of functions:
 
@@ -96,9 +97,9 @@ This web service is built using NestJs, and communication occurs via a RESTful A
 
 For further insights and detailed information, please consult the corresponding Service whitebox documentation.
 
-==== NFT Folder Smart Contracts (Blackbox)
+=== {projectName} Smart Contracts (Blackbox)
 
-The Smart Contracts within the NFT Folder encompass various functions essential for storing and reading data on the Blockchain:
+The Smart Contracts within the {projectName} encompass various functions essential for storing and reading data on the Blockchain:
 
 **Container**
 
@@ -139,20 +140,20 @@ The Smart Contracts within the NFT Folder encompass various functions essential 
 * Read the Segment of a Token
 * Remove a Token from a Segment
 
-==== Quorum Blockchain (Blackbox)
+=== Quorum Blockchain (Blackbox)
 
 Quorum Blockchain is a permissioned, enterprise-focused blockchain platform, based on the Ethereum protocol.
 It is designed to offer privacy, high throughput, and enhanced performance for businesses and financial institutions by implementing features such as private transactions and permissioned networks.
 
-In the context of the NFT-Folder, the Blockchain serves as the exclusive storage platform for tokenized assets related to Containers, Segments, and Tokens.
+In the context of the {projectName}, the Blockchain serves as the exclusive storage platform for tokenized assets related to Containers, Segments, and Tokens.
 It is responsible for storing and managing the Smart Contracts, ensuring the integrity and security of the data stored within.
 
-=== Building Blocks - Level 2
+== Building Blocks - Level 2
 
 In level 2, the black boxes of level 1 become white boxes.
 We look into each component in detail.
 
-==== Blockchain Connector (Whitebox)
+=== Blockchain Connector (Whitebox)
 
 This section describes the Blockchain Connector architecture and its implementation.
 The Blockchain Connector is a single NestJs Webservice.
@@ -199,16 +200,16 @@ The Blockchain Connector is a single NestJs Webservice.
 
 |===
 
-==== NFT Folder Smart Contracts (Whitebox)
+=== {projectName} Smart Contracts (Whitebox)
 
-The Smart Contracts within the NFT-Folder encapsulate the core functionality of the system.
+The Smart Contracts within the {projectName} encapsulate the core functionality of the system.
 They manage Containers, Segments, and Tokens.
 
 |===
 |Smart Contract |Description
 
 |Container
-|For each organization utilizing the NFT-Folder, a distinct instance of the Container contract is deployed on the Blockchain. This contract is responsible for the creation of new Segments, which are automatically associated with the Container. Additionally, the Container contract retrieves all Segments belonging to it.
+|For each organization utilizing the {projectName}, a distinct instance of the Container contract is deployed on the Blockchain. This contract is responsible for the creation of new Segments, which are automatically associated with the Container. Additionally, the Container contract retrieves all Segments belonging to it.
 
 |Segment
 |The Segment contract is deployed via the Container contract. Given that the Container contract is owned by a particular organization, the Segment contract created through it is inherently tied to that organization. This contract handles the addition and removal of Tokens from the Segment.
