--- a/documentation/06_runtime_view.adoc
+++ b/documentation/06_runtime_view.adoc
@@ -1,34 +1,40 @@
-[[section-runtime-view]]
-== Runtime View
+[[chapter-runtime-view]]
+:docinfo: shared
+:toc: left
+:toclevels: 3
+:sectnums:
+:copyright: Open Logistics Foundation License 1.3
 
-In contrast to the static building block view, this section visualizes dynamic aspects of the NFT-Folder.
-The runtime view describes concrete behavior and interactions of the system's building blocks across the architecture, i.e., how instances of building blocks of the NFT-Folder perform their job and communicate at runtime.
+= Runtime View
+
+In contrast to the static building block view, this section visualizes dynamic aspects of the {projectName}.
+The runtime view describes concrete behavior and interactions of the system's building blocks across the architecture, i.e., how instances of building blocks of the {projectName} perform their job and communicate at runtime.
 Important usage scenarios with architectural relevance are e.g. interactions at critical external interfaces, operation and administration (launch, start-up, stop), and error and exception scenarios.
 
-=== General Component Communication
+== General Component Communication
 
-All communication between the NFT-Folder components occurs through the exchange of JSON messages, facilitated either via REST or JSON-RPC.
+All communication between the {projectName} components occurs through the exchange of JSON messages, facilitated either via REST or JSON-RPC.
 
-The following diagram outlines how the components of the NFT-Folder interact with each other:
+The following diagram outlines how the components of the {projectName} interact with each other:
 
 image::drawio/chapter_6/component_communication.svg[BC-Connector Communication]
 
-1. The *external project* using the NFT-Folder must develop its own project-specific Blockchain Connector tailored to its specific use case functionality.
+1. The *external project* using the {projectName} must develop its own project-specific Blockchain Connector tailored to its specific use case functionality.
 2. The *project-specific Blockchain Connector* interacts with the smart contracts through the REST API of the Blockchain Connector.
 3. The *Blockchain Connector* uses the web3.js library to establish a connection to the blockchain, enabling transactions and read operations.
 4. The *Quorum Blockchain* is accessible through JSON-RPC.
 
-=== Use Cases and process information
+== Use Cases and process information
 
-==== Use Case 1 - Mint Token
+=== Use Case 1 - Mint Token
 
 image::drawio/chapter_6/mint-token.svg[Mint Token]
 
-==== Use Case 2 - Update Token
+=== Use Case 2 - Update Token
 
 image::drawio/chapter_6/update-token.svg[Update Token]
 
-==== Use Case 3 - Burn Token
+=== Use Case 3 - Burn Token
 
 image::drawio/chapter_6/burn-token.svg[Burn Token]
 
