--- a/documentation/08_concepts.adoc
+++ b/documentation/08_concepts.adoc
@@ -1,37 +1,43 @@
-[[section-concepts]]
-== Cross-cutting Concepts
+[[chapter-concepts]]
+:docinfo: shared
+:toc: left
+:toclevels: 3
+:sectnums:
+:copyright: Open Logistics Foundation License 1.3
+
+= Cross-cutting Concepts
 
 Concepts form the basis for conceptual integrity (consistency, homogeneity) of the architecture.
 Thus, they are an important contribution to achieve inner qualities.
 This section describes general structures and system-wide cross-cutting aspects.
 It also presents various technical solutions.
 
-=== Design Patterns
+== Design Patterns
 
-The NFT-Folder uses different design patterns.
+The {projectName} uses different design patterns.
 
-==== Micro Services
+=== Micro Services
 
 A microservice architecture is a variant of a service-oriented architecture (SOA).
 The target system is composed of a set of fine-granular services ("micros") that allow for easy, independent distribution, as well as independent changes and extensions.
 Each microservice has a high degree of autonomy and isolation, and can be developed autonomously and deployed in its own container (as an implementation of the Application Container architecture pattern).
-Each microservice can be located in a different place and implemented using a different technology; they communicate with each other using lightweight protocols (fast, data-efficient protocols such as REST ).
+Each microservice can be located in a different place and implemented using a different technology; they communicate with each other using lightweight protocols (fast, data-efficient protocols such as REST).
 
 The goals of this architecture are reuse, high cohesion, low coupling, separation of concerns, single responsibility, and information hiding.
 Its advantages are modularity and maintainability, as well as faster adaptation to changing requirements (scaling).
 
 The Blockchain Connector is designed to conform to microservice architecture.
 
-==== Internal Communication
+=== Internal Communication
 
 Communication between the project-specific Blockchain Connector and the Blockchain Connector takes place via a REST API.
 Communication between the Blockchain Connector and the Blockchain takes place using the web3.js library, which uses an RPC endpoint of the Blockchain to send transactions and execute read accesses.
 
-=== Cross-cutting Solutions
+== Cross-cutting Solutions
 
-The following solutions are applied in all components of the NFT-Folder.
+The following solutions are applied in all components of the {projectName}.
 
-==== Error Handling
+=== Error Handling
 
 In the Blockchain Connector, errors resulting from incorrect inputs to the REST API are responded to with descriptive error messages.
 This standardized error handling mechanism is implemented across all controllers within the Blockchain Connector.
@@ -39,7 +45,7 @@ Moreover, custom errors are employed within the Smart Contracts to validate entr
 Should an input be deemed incorrect, a corresponding custom error is generated.
 When the Blockchain Connector interacts with the Smart Contracts, any such errors are propagated to the end user of the REST API via the error message payload."
 
-==== Testability
+=== Testability
 
 The test setup for the Blockchain Connector adheres to typical NestJS project conventions.
 Each relevant class is associated with at least one corresponding test file, mirroring the name of the class file with an appended `.spec` suffix.
@@ -47,12 +53,12 @@ Each relevant class is associated with at least one corresponding test file, mir
 Similarly, the Smart Contract tests maintain identical names to their respective Smart Contract files, with the inclusion of the `.test` suffix.
 These test files verify the behavior and functionality of the Smart Contracts.
 
-==== Events
+=== Events
 
 A fundamental aspect of the project revolves around events, which are emitted on the Blockchain by certain smart contract functions.
 These events serve as a historical record, providing valuable insights into different activities within the system.
 
-Events are systematically utilized across all Smart Contracts within the NFT folder.
+Events are systematically utilized across all Smart Contracts within the {projectName}.
 The Blockchain Connector reads these events to collect metadata related to tokens.
 For example, the Blockchain Connector can access all events linked to a specific token, extract relevant information from the initial event, and thereby obtain the token's creation timestamp.
 This information is then used to enrich the token with transactional metadata.
