--- a/05_building_block_view.adoc
+++ b/05_building_block_view.adoc
@@ -19,14 +19,14 @@ This is a simplification of arc42 (which requires short description of interface
 == Overview
 
 The {projectName} allows for the tokenization of Real-World Assets (RWAs), converting them into Non-Fungible Tokens (NFTs) and storing them on a private Ethereum-based blockchain.
-This system consists of three Smart Contracts - Container, Segment, and Token - deployed on a Quorum blockchain, along with two microservices designed to interact with these deployed Smart Contracts.
+This system consists of three Smart Contracts - Container, Segment, and Token - deployed on a Quorum blockchain, along with a microservice designed to interact with these deployed Smart Contracts.
 
 Each NFT can be linked to a Segment, which, in turn, is part of a Container.
 A Container is owned by a single organization and acts as a central hub for managing the organization's Segments and Tokens.
 To access the functionalities of the Smart Contracts, a Blockchain Connector is utilized.
 
-The two microservices include the Blockchain Connector and the Project-specific Blockchain Connector.
-The latter is specifically tailored for projects integrating the {projectName}, facilitating interaction with the Smart Contracts through the Blockchain Connector interface.
+The microservice is the Project-specific Blockchain Connector.
+It is specifically tailored for projects integrating the {projectName}, facilitating interaction with the Smart Contracts through the Blockchain Connector library.
 
 image::drawio/chapter_5/components_blackbox.svg[{projectName} components]
 
@@ -46,11 +46,11 @@ There are the following components with its responsibilities:
 
 |Project-specific Blockchain Connector
 |Custom Development
-|Handles token management for the organization by interacting with the Blockchain Connector. Specifically designed for each project integrating the {projectName}.
+|Handles token management for the organization by using the Blockchain Connector library. Specifically designed for each project integrating the {projectName}.
 
-|Blockchain Connector
+|Blockchain Connector (library)
 |Custom Development
-|Provides an interface for interacting with the Smart Contracts. Used by the project-specific Blockchain Connector to leverage Smart Contract functionality.
+|Provides functions that can be used to communicate with the blockchain or smart contract functions.
 
 |{projectName} Smart Contracts
 |Custom Development
@@ -66,17 +66,17 @@ For more details see Level 2 (Whitebox views of the components).
 
 === Project-specific Blockchain Connector (Blackbox)
 
-The project-specific Blockchain Connector is a web service serving as a bridge between the project and the Blockchain Connector.
+The project-specific Blockchain Connector is a web service serving as a bridge between the project and the Smart Contracts.
 It is customized to meet the specific requirements of a given project.
 For instance, if a project solely intends to manage tokens using the {projectName}, the project-specific Blockchain Connector will only implement such token management functions.
-It will then relay requests to the appropriate endpoints of the Blockchain Connector.
+It then uses the functions of the blockchain connector library to forward the requests to the blockchain.
 
 This tailored approach ensures that the project-specific Blockchain Connector precisely aligns with the needs of the project it serves.
 By focusing solely on the functionalities relevant to the project's objectives, it optimizes efficiency and streamlines operations within the project's ecosystem.
 
 === Blockchain Connector (Blackbox)
 
-The Blockchain Connector is a web service that offers a range of functions:
+The Blockchain Connector is a library that provides a range of functions:
 
 **Segment Management**
 
@@ -93,9 +93,10 @@ The Blockchain Connector is a web service that offers a range of functions:
 * Update a Token
 * Burn a Token
 
-This web service is built using NestJs, and communication occurs via a RESTful API, utilizing JSON for data transfer.
+This library is built using NestJs, and communication occurs via a RESTful API, utilizing JSON for data transfer.
+It is intended to be integrated into project-specific microservices to enable them to access the blockchain
 
-For further insights and detailed information, please consult the corresponding Service whitebox documentation.
+For further insights and detailed information, please consult the corresponding whitebox documentation.
 
 === {projectName} Smart Contracts (Blackbox)
 
@@ -118,27 +119,33 @@ The Smart Contracts within the {projectName} encompass various functions essenti
 * Update a Token
 * Burn a Token
 
-**ERC721AdditionalInformation**
+**TokenAdditionalInformation**
 
 * Add additional information to a Token
 * Read additional information of a Token
 * Remove additional information from a Token
 
-**ERC721Asset**
+**TokenAsset**
 
 * Set the Hash and URI of the asset to a Token
 * Read the Hash and URI of the asset of a Token
 
-**ERC721Metadata**
+**TokenMetadata**
 
 * Set the Hash and URI of the metadata to a Token
 * Read the Hash and URI of the metadata of a Token
 
-**ERC721SegmentAllocation**
+**TokenSegmentAllocation**
 
 * Add a Token to a Segment
 * Read the Segment of a Token
 * Remove a Token from a Segment
+
+**TokenHierarchy**
+
+* Add a Token to a hierarchy of Tokens
+* Read the parent or child Tokens of a Token
+* Confirm a Token as child Token
 
 === Quorum Blockchain (Blackbox)
 
@@ -156,10 +163,25 @@ We look into each component in detail.
 === Blockchain Connector (Whitebox)
 
 This section describes the Blockchain Connector architecture and its implementation.
-The Blockchain Connector is a single NestJs Webservice.
+The Blockchain Connector is a single npm library.
+Since the Blockchain Connector is intended to be integrated as a library in another Node.js project, the controllers described below are not necessary. The services should be used directly. The controller classes are used for testing purposes and can be activated or deactivated as required via an environment variable.
 
 |===
 |Component Collection |Component |Description
+
+|**Data Integrity Management**
+|
+|
+
+|
+|Data Integrity Controller
+
+(can be activated or deactivated as required)
+|Provides REST endpoints that allow strings or entire documents to be hashed and the hash value returned.
+
+|
+|Data Integrity Service
+|This service provides the functions required for hashing the strings or documents.
 
 |**Segment Management**
 |
@@ -167,6 +189,8 @@ The Blockchain Connector is a single NestJs Webservice.
 
 |
 |Segment Controller
+
+(can be activated or deactivated as required)
 |Provides REST endpoints, that are used to communicate with the Blockchain Connector. The Segment Controller invokes the Segment Service to execute Smart Contract functions. More details on the REST API can be found in the openAPI specification.
 
 |
@@ -180,6 +204,8 @@ The Blockchain Connector is a single NestJs Webservice.
 
 |
 |Token Controller
+
+(can be activated or deactivated as required)
 |Provides REST endpoints, that are used to communicate with the Blockchain Connector. The Token Controller invokes the Token Service to execute the Smart Contract functions. More details on the REST API can be found in the openAPI specification.
 
 |
@@ -194,7 +220,7 @@ The Blockchain Connector is a single NestJs Webservice.
 |
 |The Blockchain Service implements fundamental functionalities for interacting with the Blockchain, such as transaction handling. This service is used by the aforementioned services to create transaction objects and send them to the Blockchain.
 
-|**Web3 Service**
+|**Ethers Service**
 |
 |Establishes a connection to the Blockchain, which is then used by the Blockchain Service.
 
@@ -217,18 +243,21 @@ They manage Containers, Segments, and Tokens.
 |Token
 |The Token contract implements functionality based on the ERC-721 standard. Consequently, it provides functions for the entire lifecycle of NFTs and offers additional features through five extension contracts.
 
-|ERC721AdditionalInformation
-|The ERC721AdditionalInformation contract extends the Token contract by providing functions to define and retrieve additional information, represented as a string, to the Token.
+|TokenAdditionalInformation
+|The TokenAdditionalInformation contract extends the Token contract by providing functions to define and retrieve additional information, represented as a string, to the Token.
 
-|ERC721Asset
-|The ERC721Asset contract extends the Token contract by providing functions to define and retrieve the hash and URI of a RWA. The respective RWA is stored externally, not on the blockchain. The URI denotes the location of this external storage, while the hash represents the fingerprint of this RWA and serves to verify the asset's integrity.
+|TokenAsset
+|The TokenAsset contract extends the Token contract by providing functions to define and retrieve the hash and URI of a RWA. The respective RWA is stored externally, not on the blockchain. The URI denotes the location of this external storage, while the hash represents the fingerprint of this RWA and serves to verify the asset's integrity.
 
-|ERC721Metadata
-|The ERC721Metadata contract extends the Token contract by providing functions to define and retrieve the hash and URI of the metadata of a RWA. The respective metadata is stored externally, not on the blockchain. The URI denotes the location of this external storage, while the hash represents the fingerprint of this metadata and serves to verify the asset's integrity.
+|TokenMetadata
+|The TokenMetadata contract extends the Token contract by providing functions to define and retrieve the hash and URI of the metadata of a RWA. The respective metadata is stored externally, not on the blockchain. The URI denotes the location of this external storage, while the hash represents the fingerprint of this metadata and serves to verify the asset's integrity.
 
-|ERC721RemoteId
-|The ERC721RemoteId contract extends the Token contract by providing functions to define and retrieve the specific identifier of a RWA. This identifier serves to uniquely identify the RWA within the external system, such as a database.
+|TokenRemoteId
+|The TokenRemoteId contract extends the Token contract by providing functions to define and retrieve the specific identifier of a RWA. This identifier serves to uniquely identify the RWA within the external system, such as a database.
 
-|ERC721SegmentAllocation
-|The ERC721SegmentAllocation contract extends the Token contract by providing functions of assign and remove a Token from a Segment. A Token can be assigned to multiple Segments as needed.
+|TokenSegmentAllocation
+|The TokenSegmentAllocation contract extends the Token contract by providing functions of assign and remove a Token from a Segment. A Token can be assigned to multiple Segments as needed.
+
+|TokenHierarchy
+|The TokenHierarchy contract extends the token contract and provides functions to mark tokens as the root of a new token hierarchy or to append them as a leaf to an existing hierarchy.
 |===
